--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   shadcn_ui: ^0.9.5
   font_awesome_flutter: ^10.7.0
   shadcn_flutter: ^0.0.20
-
+  flutter_form_builder: ^9.5.0
+  form_builder_validators: ^11.0.0
 
 dev_dependencies:
   flutter_test:
