--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shadcn_flutter: ^0.0.20
   flutter_form_builder: ^9.5.0
   form_builder_validators: ^11.0.0
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
